[package]
name = "napi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
napi = "2.16.1"
napi-derive = "2.16.1"

[build-dependencies]
napi-build = "2.1.2"
