[package]
name = "napi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
crossterm = "0.27.0"
napi = "2.16.1"
napi-derive = "2.16.1"
ratatui = "0.26.1"

[build-dependencies]
napi-build = "2.1.2"
